메인화면 공동구매 완료와 약간의 디자인 변경